  27 Aug 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Update otopi, ovirt-host-deploy dependencies

  18 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  sync with upstream

  18 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  sync with upstream

  23 Jul 2013; Alon Bar-Lev <alonbl@redhat.com>
  +files/ovirt-engine-notifier.init.d, files/ovirt-engine.init.d,
  files/ovirt-websocket-proxy.init.d, ovirt-engine-9999.ebuild:
  sync upstream

  17 Jul 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  sync with upstream

  31 May 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  remove workaround of master

  31 May 2013; Alon Bar-Lev <alonbl@redhat.com>
  +files/ovirt-websocket-proxy.init.d, files/ovirt-engine.init.d, metadata.xml,
  ovirt-engine-9999.ebuild:
  sync upstream

  14 May 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  add bind-tools dependency

  09 May 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  do not compile all locales when minimal

  25 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> files/ovirt-engine.init.d:
  follow upstream service name

  22 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> files/ovirt-engine.init.d:
  update service location

  21 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Add engine-cleanup

  19 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Add dev-libs/libxml2 dependency

  18 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  update dependencies, no embedded remains

  18 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Dependency cleanup

  11 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Explicit depend on otopi as it is used for setup

  11 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  No need postgres-server any more
