@@ -5,8 +5,8 @@
 		<flag name='system-jars'>
 			Use system jars as much as possible.
 		</flag>
-		<flag name='novnc'>
-			Enable novnc support.
+		<flag name='quick'>
+			Build quick unusable.
 		</flag>
 	</use>
 </pkgmetadata>
